<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mostrarUsuariosFragment"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_mu" />
        <item
            android:id="@+id/mostrarInformacionFragment"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_miu" />
        <item
            android:id="@+id/agregarUsuarioFragment"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_au" />
        <item
            android:id="@+id/actualizarUsuarioFragment"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_acu" />
        <item
            android:id="@+id/eliminarUsuarioFragment"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/menu_eu" />
    </group>
</menu>