<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.agregarusuario.AgregarUsuarioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/nombreAdd"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="84dp"
            android:ems="10"
            android:hint="@string/Nombre"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edadAdd"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/Edad"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreAdd" />

        <EditText
            android:id="@+id/telefonoAdd"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/Telefono"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edadAdd" />

        <EditText
            android:id="@+id/correoAdd"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:hint="@string/Correo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefonoAdd" />

        <ImageView
            android:id="@+id/fotoAdd"
            android:layout_width="75dp"
            android:layout_height="71dp"
            android:layout_marginStart="184dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/Vacio"
            android:src="@drawable/ic_menu_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correoAdd" />

        <Button
            android:id="@+id/btnFotoAdd"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="140dp"
            android:text="@string/btnfoto"
            app:iconTint="#4CAF50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fotoAdd" />

        <Button
            android:id="@+id/btnUsuarioAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/AgregarUsuario"
            app:iconTint="#4CAF50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFotoAdd" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>