<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.informacionusuario.MostrarInformacionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/nombreInfo"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="24dp"
            android:hint="@string/Vacio"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lavelnombre" />

        <EditText
            android:id="@+id/edadInfo"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Vacio"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/laveledad" />

        <EditText
            android:id="@+id/telefonoInfo"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Vacio"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/laveltelefono" />

        <EditText
            android:id="@+id/correoInfo"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Vacio"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lavelcorreo" />

        <ImageView
            android:id="@+id/fotoInfo"
            android:layout_width="75dp"
            android:layout_height="71dp"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/Vacio"
            android:src="@drawable/ic_menu_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correoInfo" />

        <Button
            android:id="@+id/btnEditarInfo"
            android:layout_width="126dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="64dp"
            android:text="@string/Editar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fotoInfo" />

        <Button
            android:id="@+id/btnEliminarInfo"
            android:layout_width="139dp"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="40dp"
            android:text="@string/Eliminar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEditarInfo"
            app:layout_constraintTop_toBottomOf="@+id/fotoInfo" />

        <TextView
            android:id="@+id/lavelnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/laveledad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/Edad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreInfo" />

        <TextView
            android:id="@+id/laveltelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/Telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edadInfo" />

        <TextView
            android:id="@+id/lavelcorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/Correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefonoInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>