<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eliminarusuario.EliminarUsuarioFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="477dp"
        android:layout_height="813dp">

        <EditText
            android:id="@+id/nombreDel"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="4dp"
            android:hint="@string/Vacio"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lavelnombre" />

        <EditText
            android:id="@+id/edadDel"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Vacio"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/laveledad" />

        <EditText
            android:id="@+id/telefonoDel"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Vacio"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/laveltelefono" />

        <EditText
            android:id="@+id/correoDel"
            android:layout_width="274dp"
            android:layout_height="46dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/Vacio"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lavelcorreo" />

        <ImageView
            android:id="@+id/fotoDel"
            android:layout_width="75dp"
            android:layout_height="71dp"
            android:layout_marginTop="164dp"
            android:contentDescription="@string/Vacio"
            android:src="@drawable/ic_menu_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correoDel" />

        <TextView
            android:id="@+id/lavelnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/laveledad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Edad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreDel" />

        <TextView
            android:id="@+id/laveltelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edadDel" />

        <TextView
            android:id="@+id/lavelcorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/Correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefonoDel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>